add winner modal and applaus audio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--From Margit's JS tricks classwork-->
     <div class="overlay">
       <div class="modal">
-        <h2>Game Over</h2>
+        <p></p>
         <div
           class="tenor-gif-embed loser-gif"
           data-postid="13012226"
@@ -46,6 +46,21 @@
             >Cute Dragon GIFs</a
           >
         </div>
+        <div class="winner-gif">
+          <iframe
+            src="https://giphy.com/embed/l3q30MhkUmg473Z96"
+            width="550"
+            height="300"
+            frameborder="0"
+            class="giphy-embed"
+            allowfullscreen
+          ></iframe>
+          <p>
+            <a href="https://giphy.com/gifs/balloon-l3q30MhkUmg473Z96"
+              >via GIPHY</a
+            >
+          </p>
+        </div>
         <span class="material-symbols-outlined close-modal"> close </span>
       </div>
     </div>
@@ -59,6 +74,10 @@
       src="assets/audio/chipmunks-hehehei-113723.mp3"
     ></audio>
     <audio id="background-audio" src="assets/audio/World-Map1.mp3"></audio>
+    <audio
+      id="applause-audio"
+      src="assets/audio/small-applause-6695.mp3"
+    ></audio>
     <script src="script.js"></script>
     <script
       type="text/javascript"
